--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,22 +28,22 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      # 1. Descarga tu código al servidor temporal
+      # 1. Descarga tu código al servidor temporal (v3 -> v4)
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2. Configura las GitHub Pages
+      # 2. Configura las GitHub Pages (v3 -> v5)
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
 
-      # 3. Construye el artefacto (tu sitio) y lo sube
+      # 3. Construye el artefacto (tu sitio) y lo sube (v2 -> v3)
       # Sube todo lo que está en la raíz (path: '.')
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: '.' 
 
-      # 4. Despliega el sitio
+      # 4. Despliega el sitio (v2 -> v4)
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
